[gd_scene load_steps=8 format=3 uid="uid://r4clnru4g5qn"]

[ext_resource type="Script" path="res://resources/interactables/Anvil.gd" id="1_5cphj"]
[ext_resource type="PackedScene" uid="uid://vjy541wcl5th" path="res://resources/other/LoadingRing.tscn" id="2_dwynw"]
[ext_resource type="PackedScene" uid="uid://blirbtgwrrvr4" path="res://resources/interactables/InteractableBase.tscn" id="2_v6lbt"]
[ext_resource type="Texture2D" uid="uid://bumwjioq3qj11" path="res://asset/visual/map/Biom1/anvil.png" id="2_vf1wx"]
[ext_resource type="Shader" path="res://resources/shaders/Flash.gdshader" id="3_jbsjy"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_o68up"]
resource_local_to_scene = true
shader = ExtResource("3_jbsjy")
shader_parameter/flash_color = Color(0.992157, 1, 0.52549, 1)
shader_parameter/flash_modifier = 0.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dygx7"]
size = Vector2(18, 2)

[node name="Anvil" type="StaticBody2D"]
script = ExtResource("1_5cphj")
crafting_time = 0.5

[node name="InteractableBase" parent="." instance=ExtResource("2_v6lbt")]

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 2
y_sort_enabled = true
material = SubResource("ShaderMaterial_o68up")
position = Vector2(0, -4)
texture = ExtResource("2_vf1wx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -5)
shape = SubResource("RectangleShape2D_dygx7")

[node name="CraftingTimer" type="Timer" parent="."]
one_shot = true

[node name="LoadingRing" parent="." instance=ExtResource("2_dwynw")]
visible = false
offset_top = -22.0
offset_bottom = -8.0

[connection signal="start_interaction" from="InteractableBase" to="." method="do_interaction"]
[connection signal="stop_interaction" from="InteractableBase" to="." method="stop_interaction"]
[connection signal="timeout" from="CraftingTimer" to="." method="_on_crafting_timer_timeout"]

[editable path="InteractableBase"]
[editable path="InteractableBase/DetectionArea"]
